--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,34 @@
     min-height: 80px;
     background-color: lightgreen;
 }
+
+
+/* Inizio gestione dei font */
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h2 {
+    font-size: 2.5rem;
+}
+
+h3 {
+    font-size: 2.3rem;
+}
+
+h4 {
+    font-size: 1.3rem;
+}
+
+h5,
+small,
+footer {
+    font-size: 0.9rem;
+}
+
+
+/* Fine gestione dei font */
+
+.text_right {
+    text-align: right;
+}
