--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ footer {
     width: 50%;
 }
 
-.playstation_items_container img {
+.playstation_items_container .card img {
     opacity: 0.5;
 }
 
@@ -127,7 +127,7 @@ footer {
     right: -4px;
     left: -4px;
     border: 3px solid blue;
-    border-radius: 3%;
+    border-radius: 16px;;
 }
 
 .card_active_bottom {
@@ -136,7 +136,7 @@ footer {
 }
 /* Fine gestione card */
 
-/* Inizio gestione padding e margin */
+/* Inizio gestione spaziature */
 
 .padding_y_s {
     padding-top: 30px;
@@ -153,6 +153,10 @@ footer {
     padding-bottom: 70px;
 }
 
+.rounded_16 {
+    border-radius: 16px;
+}
+
 #returnal .padding_y_m {
     padding-top: 300px;
     padding-bottom: 50px;
@@ -161,5 +165,44 @@ footer {
 .ps_footer_logo_margin_negative {
     margin-left: -16px;
 }
+/* Fine gestione spaziature */
 
+/* Inizio gestione hover */
+.navbar .navbar-nav .nav-link:hover,
+.navbar .ms-auto .nav-link:hover {
+    color: #2D64E6 !important;
+}
+
+.playstation_items_container .card:hover img {
+    opacity: 1;
+}
+
+.games_container .card:hover {
+    transform: translateY(-10px);
+}
+header {
+    z-index: 99;
+}
+
+header .navbar-nav .nav-link + .dropdown-menu,
+.navbar .ms-auto .nav-link + .dropdown-menu {
+    display: flex;
+    flex-grow: 0;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: -100px;
+    justify-content: center;
+    border: 0;
+    border-radius: 0;
+    border-top: 1px solid lightgray;
+    transition: all .3s;
+    overflow: hidden;
+    z-index: -1;
+  }
+  
+  header .navbar-nav .nav-link:focus + .dropdown-menu,
+  .navbar .ms-auto .nav-link:focus + .dropdown-menu {
+    top: 116px;
+  }
 
