--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ footer {
     right: -4px;
     left: -4px;
     border: 3px solid blue;
-    border-radius: 16px;;
+    border-radius: 16px;
 }
 
 .card_active_bottom {
@@ -174,6 +174,11 @@ footer {
     color: #2D64E6 !important;
 }
 
+.navbar .navbar-nav .nav-link:focus,
+.navbar .ms-auto .nav-link:focus {
+    color: #0072CE !important;
+}
+
 .playstation_items_container .card:hover img {
     opacity: 1;
 }
@@ -181,6 +186,7 @@ footer {
 .games_container .card:hover {
     transform: translateY(-10px);
 }
+
 header {
     z-index: 99;
 }
